# rust-ART-Pi

./: README.md
blink/src/: main.rs
book/: book.md
documents/book/: 2.开始.md
hello/: Cargo.toml  memory.x
hello/.cargo/: config
routines/blink/: .gdbinit  Cargo.toml
routines/hello/: .gdbinit  openocd.cfg
routines/hello/src/: main.rs
