[package]
name = "blink"
version = "0.1.0"
authors = ["leodu"]
edition = "2018"

categories = ["embedded", "hardware-support", "no-std"]
description = "Examples programs for nucleo-H743zi board"
keywords = ["arm", "cortex-m", "stm32h7xx", "hal"]
license = "0BSD"
repository = "https://github.com/astraw/nucleo-h743zi"

[dependencies]
cortex-m-rt = "0.6.7"
nb = "0.1.1"
embedded-hal = "0.2.3"
panic-halt = "0.2"
stm32h7xx-hal = {version="0.1", features=["stm32h7x3"]}
